styles.css
/* ... */
.dropdownSize {
  position: relative;
  display: inline-block;
  margin-bottom: 5%;
  width: 80%;
  
}

.dropbtn {
  background-color: white;
  color: #000;
  
  font-size: 16px;
  border: none;
  cursor: pointer;
 
  width: 100%;
  font-family: Kl9yFont;
  height: 3rem;
}

.dropdownSize-content {
  display: none;
  position: absolute;
  background-color: white;
  width: 100%;
  min-width: 80px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  
}

.dropdownSize-content a {
  color: #000;
  padding: 10px;
  text-decoration: none;
  display: block;
  font-family: Kl9yFont;
}

.dropdownSize-content a:hover {
  background-color: #f1f1f1;
}

.dropdownSize:hover .dropdownSize-content {
  display: block;
}

.dropdownSize:hover .dropbtn {
  background-color: #f1f1f1;
}
.dev{
  display: none;
}

/* Add animation */
@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

#loadingAnimation::after {
  content: '';
  display: inline-block;
  width: 20px;
  height: 20px;
  margin-left: 10px;
  border: 3px solid white;
  border-top-color: #ce6ee9;
  border-radius: 50%;
  animation: spin 1s linear infinite;
}



@media (max-width: 500px){
    .buyingDiv{
        background-color: blue;
        margin: auto;
        width: 90%;
    }
    .kl9yLogo{
        width: 20%;
        margin-top: 5%;
    }
    .discDiv{
        width: 80%; 
        text-align: center; 
        align-items: center; 
        flex: auto; 
        margin: auto; 
        justify-content: center; 
        background-image: url('imgs/ouo.jpeg'); 
        border-radius: 20px;
    }
    .navElem{
        font-size: 7px;
        font-size: 1.5vw;
    }
    .prodMain{
        flex-direction: column;
        text-align: center;
        align-items: center;
        align-content: center;
        max-width: 100%;
        overflow-x: hidden;
    }
    .prodDetails{
        width: 100%;
        padding-left: 5%;
    }
    .buyNowBtn{
        width: 90%;
    }
    .sizingBtnKlay{
      width: 90%;
    }
    .prodImg{
        width: 90%;
    }

    .container {
        max-width: 1050px;
        width: 90%;
        margin: auto;
        display: block;
      }
      
      .navbar {
        width: 100%;
        display: block;
      }
      .navBar{
        display: none;
      }
      .productLines{
        flex-wrap:wrap;
        width: 90%;
      }
      .imgA{
        width:48%;
        margin-bottom: 10%;
      }
      .cartImg{
        width: 20%; 
        margin-top: 20px; 
        margin-bottom: 20px; 
        margin-left: 2%;
      }
      .cartItemName{
        padding-left: 5%; 
        padding-right: 5%; 
        color: #ce6ee9; 
        font-family: Kl9yFont; 
        width: 30%;
      }
      .cartRemoveBtn{
        margin-right: 2%;
      }
      .cartItemName{
        font-size: small;
      }
      .dropdownSize{
        width: 90%;
      }
      
      
}

